--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
 certifi==2022.9.24
 charset-normalizer==2.1.1
 idna==3.4
-numpy==1.23.4
-opencv-python==4.6.0.66
+isort==5.10.1
+Pillow==9.2.0
+pyTelegramBotAPI==4.7.0
 python-dotenv==0.21.0
+pytz==2022.5
 requests==2.28.1
-telebot==0.0.4
 urllib3==1.26.12
