removed database from git and added .db files to . gitignore

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,2 @@
-TOKEN_TELEGRAM=
-TOKEN_RIA=
+TOKEN_TELEGRAM=5314242846:AAGieOXsnqIKhMvb5YqZlEmD6RIM2u35JOw
+TOKEN_RIA=tLuxyN0jggj8rN7z4cBQYthIDYpq95soslZ6McCu
